# timber-llvm

./: .gitignore  .hgignore  LICENSE  README  Setup.lhs  SetupNew.lhs  install-llvm  testinstall.sh  timberc  timberc.cabal  timberc.spec
distrib/: setlocation.sh
distrib/MacOSX.pmdoc/: 01share-contents.xml  01share.xml  02bin-contents.xml  02bin.xml  index.xml
examples/: Counter.t  Echo.t  Echo2.t  Echo3.t  EchoServer.t  EchoServer2.t  Makefile  MasterMind.t  PingTimeServers.t  Primes.t  Reflex.t  SantaProblem2.t  TCPClient.t  TheSantaProblem.t  UnionFind.t
include/: arrays.c  float.c  timber.c  timber.h
lib/: ARM.t  BitOps.t  Data.Functional.List.t  Data.Objects.Dictionary.t  Data.Objects.Stack.t  POSIX.extern.bc  POSIX.extern.c  POSIX.extern.h  POSIX.extern.s  POSIX.t  Prelude.t  RandomGenerator.t  compile-c  compile-llvm  link
rtsARM/: Makefile  crt.S  cyclic.c  env.c  gc.c  linkerscript.x  lpc2468_registers.h  lpc2478_lcd.h  main.c  my9x10font.h  rts.c  rts.h  timberc.cfg  timer.c
rtsARM/ea_lcd/: lcd_hw.c  lcd_hw.h
rtsPOSIX/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  cyclic.c  gc.c  install-llvm  main.c  rts.c  rts.h  timberc.cfg  timberc.cfg.in  timer.c
src/: .#Arra  Common.hs  Config.hs  Core.hs  Core2Kindle.hs  Depend.hs  Desugar1.hs  Desugar2.hs  Env.hs  Execution.hs  Interfaces.hs  Kind.hs  Kindle.hs  Kindle2C.hs  Kindle2LLVM.hs  Kindlered.hs  LLVM.hs  LLVM.hs.bak  LLVMKindle.hs  LLVMKindle.hs.bak  LLVMPP.hs  LLVMPrim.hs  Lambdalift.hs  Lexer.hs  Main.hs  Match.hs  Name.hs  PP.hs  Parser.y  Prepare4C.hs  Reduce.hs  Rename.hs  Scp.hs  Syntax.hs  Type.hs
src.bak/: Common.hs  Config.hs  Core2Kindle.hs  Decls.hs  Derive.hs  Fixity.hs  Kind.hs  Kindle2C.hs  Kindle2LLVM.hs  LLVM.hs  LLVMKindle.hs  LLVMPP.hs  Main.hs.bak  Name.hs  ParseMonad.hs  Syntax2Core.hs  Termred.hs  Token.hs  Type2.hs
tests/: A.t  AbstractStack.t  AbstractStackClient.t  ActionParameter.t  Array0.t  ArrayTest.t  B1.t  B2.t  BeforeConstraint.t  BinTree2.t  Binary.t  Binary2.t  BitOpsDefaulting.t  BitTest.t  BitTest2.t  C1.t  C2.t  C3.t  C4.t  Conflict.t  ConflictClient.t  Cyclic.t  DataExtension.t  Defaulting.t  Derive.t  EmptyStruct.t  Fac.t  File.t  Fix.t  FloatFoldr.t  Forall.t  Forall2.t  GlobalDo.t  Guards.t  HigherOrderCircularList.t  Histo.t  HistoClient.t  ImportChain1.t  ImportChain2.t  ImportChain3.t  (+41 more)
tests/ARM/: Buttons.t  Debug.t  Graphic.t  MyString.t  Prog.t
tests/Parsing/: ParsingCombinators.t  State.t  Test.t
web/: Counter_descr.html  Echo2_descr.html  Echo3_descr.html  EchoServer2_descr.html  EchoServer_descr.html  Echo_descr.html  MasterMind_descr.html  PingTimeServers_descr.html  Primes_descr.html  Reflex_descr.html  Release-notes-1.0.3.txt  advanced.html  bindings.html  default.html  download.html  examples.html  expr.html  gentle.html  haskell.html  histcred.html  home.html  index.html  index_download.html  index_examples.html  index_gentle.html  index_histcred.html  index_limplans.html  index_pubs.html  index_summary.html  inet.html  java.html  lex.html  limplans.html  logo.eps  menu.html  menu_examples.html  menu_summary.html  old_releases.html  posix.html  programs.html  (+9 more)
